--- a/pub/index.html
+++ b/pub/index.html
@@ -2,8 +2,14 @@
 <html lang=en>
     <head>
         <meta charset=utf8>
+        <meta name=viewport content="width=device-width,initial-scale=1">
         <title>POMF =3</title>
+        <link rel=stylesheet href=stylesheets/bootstrap.css>
     </head>
     <body>
+        <script src=javascripts/lodash.js></script>
+        <script src=javascripts/reqwest.js></script>
+        <script src=javascripts/jbone.js></script>
+        <script src=javascripts/backbone.js></script>
     </body>
 </html>
