--- a/pub/index.html
+++ b/pub/index.html
@@ -1,12 +1,16 @@
-<!doctype html>
-<html lang=en>
+<!DOCTYPE html>
+<html lang=en ng-app=POMF>
     <head>
-        <meta charset=utf8>
+        <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
         <title>POMF =3</title>
         <link rel=stylesheet href=styles/bootstrap.css>
+        <link rel=stylesheet href=styles/POMF.css>
     </head>
     <body>
+        <div ng-view></div>
         <script src=scripts/angular.js></script>
+        <script src=scripts/angular-route.js></script>
+        <script src=scripts/POMF.js></script>
     </body>
 </html>
