--- a/pub/index.html
+++ b/pub/index.html
@@ -8,7 +8,9 @@
         <link rel=stylesheet href=styles/POMF.css>
     </head>
     <body>
-        <div ng-view></div>
+        <ul>
+            <li ng-view></li>
+        </ul>
         <script src=scripts/angular.js></script>
         <script src=scripts/angular-route.js></script>
         <script src=scripts/POMF.js></script>
