--- a/pub/index.html
+++ b/pub/index.html
@@ -8,9 +8,7 @@
         <link rel=stylesheet href=styles/POMF.css>
     </head>
     <body>
-        <ul>
-            <li ng-view></li>
-        </ul>
+        <ul ng-view></ul>
         <script src=scripts/angular.js></script>
         <script src=scripts/angular-route.js></script>
         <script src=scripts/POMF.js></script>
